# tracer

./: Cargo.toml  README.org  TODO.org  profile.sh  report.sh
src/: cam.rs  display.rs  draw.rs  frag.glsl  geom.rs  gui-frag.glsl  gui-vert.glsl  gui.rs  intersect.rs  main.rs  material.rs  trace.rs  vert.glsl
